use dataset.py on linux

--- a/python/defaults.cfg
+++ b/python/defaults.cfg
@@ -1,5 +1,6 @@
 [env]
-BIN_DIR:D:\work\lsol\dist\bin
+BIN_DIR:/home/yuewu/work/lsol/dist/bin
 [data]
-DATA_DIR:D:\work\lsol\data
-CACHE_DIR:D:\work\lsol\cache
+DATA_DIR:/home/yuewu/work/lsol/data
+CACHE_DIR:/home/yuewu/work/lsol/cache
+
